--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "ts-node-dev --respawn src/index.ts"
   },
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "lodash": "^4.17.21",
     "mysql": "^2.18.1"
